# wollwo-common

./: .gitignore  LICENSE  README.md  pyproject.toml
common-decorators/: pyproject.toml
common-decorators/src/common_decorators/: check_return_value_type.py  except_base_exception.py  except_exception.py  expect_exceptions.py
common-decorators/tests/: test_check_return_value_type.py  test_except_base_exception.py  test_except_exception.py
common-logging/: README.md  pyproject.toml
common-logging/src/common_logging/: __main__.py  aa.py  common_log_line.py
common-logging/src/examples/: example_dataclass.py
custom_logging/: __init__.py  __main__.py
examples/src/: __init__.py
examples/src/examples/: example_dataclass.py
src/wollwo_common/: __init__.py
src/wollwo_common/common_logging/: __init__.py  __main__.py  common_log_line.py  common_logger.py
src/wollwo_common/wollwo_decorators/: __init__.py  check_return_value_type.py  except_base_exception.py
tests/test_wollwo_common/test_common_logging/: test_common_logger.py
tests/test_wollwo_common/test_wollwo_decorators/: test_check_return_value_type.py  test_except_base_exception.py
tests/wollwo_common/: __init__.py
tests/wollwo_common/wollwo_decorators/: test_check_return_value_type.py  test_except_base_exception.py
wollwo-decorators/: pyproject.toml
wollwo-decorators/src/wollwo_decorators/: check_return_value_type.py
wollwo-decorators/tests/: test_except_base_exception.py
