[project]
name = "common-logging"
version = "0.1.0"
description = ""
authors = [
    {name = "wollwo",email = "perzelmichal@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "logging (>=0.4.9.6,<0.5.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.poetry]
packages = [{include = "common_logging", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
